--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Developer and pixel artist crafting intelligent mobile experiences and immersive games. Exploring the intersection of human creativity and technological possibility.">
   <link rel="stylesheet" href="style.css">
-  <title>Portfolio - Diseñador de Producto</title>
+  <title>Mario Diez - Developer & Game Artist</title>
 </head>
 
 <body>
@@ -37,9 +38,8 @@
 
     <section class="hero">
       <div class="hero-content">
-        <h1>Hi, I'm Mario, Developer and Game Dev Pixel Artist</h1>
-        <p>I specialize in React Native app development and game development, combining programming with pixel art to
-          create engaging experiences.</p>
+        <h1>Building tools that amplify what we can do</h1>
+        <p>Developer and pixel artist creating mobile apps and games that enhance human capability. Exploring how thoughtful design and technology can help us think, create, and connect better.</p>
       </div>
     </section>
 
@@ -49,8 +49,7 @@
         <div class="project-card purple">
           <div class="project-info">
             <h3>Kaption.ai</h3>
-            <p>AI-powered platform that automatically generates accurate subtitles in multiple languages, making video
-              content accessible to global audiences.</p>
+            <p>Breaking language barriers in video content. Intelligent subtitling that helps creators reach wider audiences and makes content accessible to everyone.</p>
           </div>
           <img src="./assets/images/kaption-ai.png" alt="Kaption AI">
           <a href="https://apps.apple.com/es/app/captions-video-subtitles/id6504444101" class="arrow-icon"
@@ -59,10 +58,8 @@
 
         <div class="project-card light">
           <div class="project-info">
-            <h3>Clipboard manager</h3>
-            <p>A simple yet powerful clipboard history manager for macOS that helps you access and reuse previously
-              copied
-              items.</p>
+            <h3>Clipboard Manager</h3>
+            <p>Your clipboard, enhanced. A macOS tool that remembers what you forget, helping you work faster and waste less time searching for that thing you copied five minutes ago.</p>
           </div>
           <img src="./assets/images/shiftcase-macos.png" alt="Lendscape">
           <a href="https://apps.apple.com/es/app/clipboard-manager-shiftcase/id1451459367?mt=12" class="arrow-icon"
@@ -77,8 +74,7 @@
         <div class="project-card dark">
           <div class="project-info">
             <h3>Dungeon Crawler Assets</h3>
-            <p>Complete asset pack including character sprites, animations, environment tiles, and UI elements for a
-              retro-style dungeon crawler game.</p>
+            <p>Complete pixel art collection crafted to bring retro dungeon worlds to life. Characters, environments, and UI elements designed to help game creators build immersive experiences.</p>
           </div>
           <img src="./assets/images/items-dungeon-escenario.png" alt="Dungeon Items and Scenario"
             class="pixel-art-preview">
@@ -88,8 +84,7 @@
         <div class="project-card purple">
           <div class="project-info">
             <h3>Modern Dungeon</h3>
-            <p>Collection of detailed character sprites and animations for 2D platformer games, including idle, walk,
-              run, and combat animations.</p>
+            <p>Handcrafted sprites and fluid animations for 2D adventures. Every frame designed to bring characters to life and help developers tell better stories.</p>
           </div>
           <img src="./assets/images/modern-dungeon.png" alt="Modern Dungeon Assets" class="pixel-art-preview">
           <a href="./assets/images/game-elements.aseprite" class="arrow-icon">→</a>
@@ -98,7 +93,7 @@
         <div class="project-card light">
           <div class="project-info">
             <h3>Don't Press the Button</h3>
-            <p>A quirky pixel art game where every button press leads to unexpected consequences.</p>
+            <p>A playful exploration of curiosity and consequences. Sometimes the best interactions challenge our impulses.</p>
           </div>
           <img src="./assets/images/don-t-press-the-button.png" alt="Don't Press the Button Game"
             class="pixel-art-preview">
@@ -108,7 +103,7 @@
         <div class="project-card dark">
           <div class="project-info">
             <h3>Echoes of Ryu</h3>
-            <p>A martial arts themed pixel art adventure with dynamic combat animations.</p>
+            <p>Martial arts meets pixel art. An adventure where every movement tells a story and combat becomes expression.</p>
           </div>
           <img src="./assets/images/echoes-of-ryu.png" alt="Echoes of Ryu Game" class="pixel-art-preview">
           <a href="https://teamplayagain.itch.io/echoes-of-ryu" class="arrow-icon" target="_blank">→</a>
@@ -117,7 +112,7 @@
         <div class="project-card purple">
           <div class="project-info">
             <h3>Elevator Invaders</h3>
-            <p>A unique take on the classic space invaders genre set in a vertical scrolling elevator.</p>
+            <p>Classic arcade action reimagined. Taking familiar mechanics to unexpected places.</p>
           </div>
           <img src="./assets/images/elevator-invaders.png" alt="Elevator Invaders Game" class="pixel-art-preview">
           <a href="https://teamplayagain.itch.io/elevator-invaders" class="arrow-icon" target="_blank">→</a>
@@ -126,7 +121,7 @@
         <div class="project-card light">
           <div class="project-info">
             <h3>Fishing Em All</h3>
-            <p>A relaxing pixel art fishing game with collectible creatures and various environments.</p>
+            <p>A meditative experience in pixel form. Slow down, explore, and discover what lies beneath the surface.</p>
           </div>
           <img src="./assets/images/fishing-em-all.png" alt="Fishing Em All Game" class="pixel-art-preview">
           <a href="https://teamplayagain.itch.io/fishing-em-all" class="arrow-icon" target="_blank">→</a>
@@ -135,7 +130,7 @@
         <div class="project-card dark">
           <div class="project-info">
             <h3>Harnoon</h3>
-            <p>A mystical adventure game with detailed character and environment pixel art.</p>
+            <p>A journey through mystical landscapes. Detailed worlds crafted pixel by pixel to spark imagination.</p>
           </div>
           <img src="./assets/images/harnoon.png" alt="Harnoon Game" class="pixel-art-preview">
           <a href="https://teamplayagain.itch.io/harnoon" class="arrow-icon" target="_blank">→</a>
@@ -144,7 +139,7 @@
         <div class="project-card purple">
           <div class="project-info">
             <h3>Sanctuary</h3>
-            <p>A atmospheric pixel art game focused on exploration and discovery.</p>
+            <p>An atmospheric space for exploration. Discovering what emerges when you give players room to breathe.</p>
           </div>
           <img src="./assets/images/sanctuary.png" alt="Sanctuary Game" class="pixel-art-preview">
           <a href="https://teamplayagain.itch.io/sanctuary" class="arrow-icon" target="_blank">→</a>
@@ -154,9 +149,8 @@
 
     <section id="contact" class="contact-section">
       <div class="contact-content">
-        <h2 class="section-title">Contact Me</h2>
-        <p class="contact-description">Whether you need a mobile app, game development, or pixel art assets, I'm here to
-          help bring your ideas to life.</p>
+        <h2 class="section-title">Let's Build Something</h2>
+        <p class="contact-description">Working on something that could use better tools or more engaging experiences? Let's explore what's possible together.</p>
 
         <div class="contact-links">
           <a href="mailto:mario.diez.dev@gmail.com" class="contact-button">
