--- a/index.html
+++ b/index.html
@@ -38,30 +38,57 @@
 
     <section class="hero">
       <div class="hero-content">
-        <h1>Building tools that amplify what we can do</h1>
-        <p>Developer and pixel artist creating mobile apps and games that enhance human capability. Exploring how thoughtful design and technology can help us think, create, and connect better.</p>
+        <div class="hero-text">
+          <span class="hero-label">Developer & Pixel Artist</span>
+          <h1>Building tools that amplify what we can do</h1>
+          <p>Creating mobile apps and games that enhance human capability. Exploring how thoughtful design and technology can help us think, create, and connect better.</p>
+          <div class="hero-cta">
+            <a href="#projects" class="cta-primary">View Projects</a>
+            <a href="#contact" class="cta-secondary">Get in Touch</a>
+          </div>
+        </div>
+      </div>
+      <div class="hero-visual">
+        <div class="visual-card">
+          <div class="code-snippet">
+            <span class="code-line"><span class="keyword">const</span> create = <span class="keyword">async</span> () => {</span>
+            <span class="code-line">  <span class="keyword">return</span> possibilities++;</span>
+            <span class="code-line">}</span>
+          </div>
+        </div>
+        <div class="pixel-showcase">
+          <div class="pixel-grid"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="featured-projects">
+      <h2 class="section-title">Featured Work</h2>
+      <div class="featured-grid">
+        <div class="featured-card">
+          <div class="featured-image">
+            <img src="./assets/images/kaption-ai.png" alt="Kaption AI">
+          </div>
+          <div class="featured-content">
+            <span class="project-tag">Mobile App</span>
+            <h3>Kaption.ai</h3>
+            <p>Breaking language barriers in video content. Intelligent subtitling that helps creators reach wider audiences and makes content accessible to everyone.</p>
+            <a href="https://apps.apple.com/es/app/captions-video-subtitles/id6504444101" class="project-link"
+              target="_blank">View on App Store →</a>
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="projects">
       <h2 class="section-title">Mobile & Desktop Apps</h2>
       <div class="projects-grid">
-        <div class="project-card purple">
-          <div class="project-info">
-            <h3>Kaption.ai</h3>
-            <p>Breaking language barriers in video content. Intelligent subtitling that helps creators reach wider audiences and makes content accessible to everyone.</p>
-          </div>
-          <img src="./assets/images/kaption-ai.png" alt="Kaption AI">
-          <a href="https://apps.apple.com/es/app/captions-video-subtitles/id6504444101" class="arrow-icon"
-            target="_blank">→</a>
-        </div>
-
         <div class="project-card light">
           <div class="project-info">
             <h3>Clipboard Manager</h3>
             <p>Your clipboard, enhanced. A macOS tool that remembers what you forget, helping you work faster and waste less time searching for that thing you copied five minutes ago.</p>
           </div>
-          <img src="./assets/images/shiftcase-macos.png" alt="Lendscape">
+          <img src="./assets/images/shiftcase-macos.png" alt="Clipboard Manager">
           <a href="https://apps.apple.com/es/app/clipboard-manager-shiftcase/id1451459367?mt=12" class="arrow-icon"
             target="_blank">→</a>
         </div>
@@ -143,6 +170,30 @@
           </div>
           <img src="./assets/images/sanctuary.png" alt="Sanctuary Game" class="pixel-art-preview">
           <a href="https://teamplayagain.itch.io/sanctuary" class="arrow-icon" target="_blank">→</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="about-section">
+      <div class="about-content">
+        <div class="about-text">
+          <h2 class="section-title">About Me</h2>
+          <p>I'm Mario, a developer and pixel artist who believes technology should enhance our natural abilities, not replace them. I build mobile apps with React Native and create pixel art for games, always exploring how better tools can help us create, communicate, and solve problems more effectively.</p>
+          <p>When I'm not coding or drawing pixel by pixel, I'm thinking about how AI and thoughtful design can amplify human creativity and connection.</p>
+        </div>
+        <div class="skills-grid">
+          <div class="skill-item">
+            <h4>Development</h4>
+            <p>React Native, JavaScript, Mobile Apps</p>
+          </div>
+          <div class="skill-item">
+            <h4>Design</h4>
+            <p>Pixel Art, Game Assets, UI/UX</p>
+          </div>
+          <div class="skill-item">
+            <h4>Tools</h4>
+            <p>Aseprite, Git, macOS Development</p>
+          </div>
         </div>
       </div>
     </section>
